Fix a spacing visual issue

--- a/src/style.css
+++ b/src/style.css
@@ -159,7 +159,7 @@ button.cancel {
 
 .item>label {
 
-    padding-top: calc(var(--pad));
+    padding-top: calc(var(--pad) * 2);
     padding-bottom: calc(var(--pad) * 2);
 }
 
